# crossconfig

./: .gitignore  AGENTS.md  changelog.md  docs.md  pyproject.toml  readme.md
.github/ISSUE_TEMPLATE/: release_checklist.md
crossconfig/: SKILL.md  __init__.py  classes.py  cli.py  errors.py
tests/: test_base.py  test_posix.py  test_windows.py
